<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:weightSum="4"
    android:padding="5dp"> <!-- to show what the parent is -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="373dp"
        android:layout_weight="2"
        android:background="@drawable/alto_campoo" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="Estación de esquí seleccionada: "
            android:textSize="24sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="231dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <Button

                android:id="@+id/training"
                android:layout_width="187dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetRight="5dp"
                android:padding="18dip"
                android:text="@string/training" />

            <Button
                android:id="@+id/ski_trails_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:padding="18dip"
                android:text="@string/ski_trails" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/groups_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetRight="5dp"
                android:text="@string/groups" />

            <Button
                android:id="@+id/book_material_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:insetLeft="5dp"
                android:text="@string/book_material" />
        </TableRow>

    </TableLayout>
</LinearLayout>