<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/mountain"
    android:weightSum="4"
    android:padding="5dp"> <!-- to show what the parent is -->

    <TextView
        android:id="@+id/textInfoNombreEstacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Estación de esquí seleccionada: "
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>

    <ImageView
        android:id="@+id/textBoxNombreEstacion"
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textInfoNombreEstacion"
        android:src="@drawable/text_box_azuloscuro3"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/textNombreEstacion"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@+id/textInfoNombreEstacion"
        android:layout_marginTop="15dp"
        android:text="@string/nombreEstacion"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"/>

    <GridLayout
        android:id="@+id/idGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp"
        android:columnCount="2"
        android:rowCount="3"
        android:layout_below="@+id/textNombreEstacion"
        android:layout_marginTop="15dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardEntrenamiento"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?selectableItemBackground"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical"
                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_play_circle_outline_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/training"
                    android:textAlignment="center"
                    android:textColor="@color/AzulOscuro3"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPistas"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?selectableItemBackground"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_filter_hdr_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ski_trails"
                    android:textAlignment="center"
                    android:textColor="@color/AzulOscuro3"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardGrupos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?selectableItemBackground"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_groups_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/groups"
                    android:textAlignment="center"
                    android:textColor="@color/AzulOscuro3"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReservar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="6dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:foreground="?selectableItemBackground"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_store_mall_directory_24"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/book_material"
                    android:textAlignment="center"
                    android:textColor="@color/AzulOscuro3"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>


</RelativeLayout>